Fix spacing social footer

--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -15,6 +15,9 @@
         }
     }
     &__social {
+        li {
+            margin: 0 10px;
+        }
         a {
             color: #fff;
             margin-bottom: 15px !important;
